cleaning up the blog

--- a/src/content/blog/binary-to-hex-pratice.mdx
+++ b/src/content/blog/binary-to-hex-pratice.mdx
@@ -1,5 +1,5 @@
 ---
-title: Binary to Hex to pratice game
+title: Binary to Hex conversions to pratice game
 description: A basic type-racer style game to pratice converting binary to hexidecimal and decimal. Get to know different number systems like the back of your hand.
 heroImage: hero.png
 pubDate: April 28 2024
