--- a/src/content/blog/create-your-resume-in-html-and-css.mdx
+++ b/src/content/blog/create-your-resume-in-html-and-css.mdx
@@ -1,5 +1,5 @@
 ---
-title: Rewrite Your Resume in HTML and CSS
+title: Why I use HTML to make my resume instead of LaTeX or Microsoft Word
 description: How HTML and CSS can form the best of both worlds between typeset languages like LaTeX and machine-parsable formats like Microsoft Word.
 heroImage: hero.png
 pubDate: May 11 2024
