--- a/src/content/blog/trace-driven-gpu-simulation-with-pytorch-profiler-and-astra-sim.mdx
+++ b/src/content/blog/trace-driven-gpu-simulation-with-pytorch-profiler-and-astra-sim.mdx
@@ -1,5 +1,5 @@
 ---
-title: Trace-Driven Simulation in Astra w/ PyTorch Profiler + Hollistic Trace Analysis
+title: Trace-Driven Simulation in Astra Sim with the PyTorch Profiler
 description: Collecting traces from PyTorch, converting them to Chakra Execution Traces, and simulating them in Astra-Sim for hardware design in an end-to-end tutorial.
 heroImage: hero.png
 pubDate: May 30 2024
