--- a/src/content/blog/analyzing-execution-traces-with-holistic-trace-analysis.mdx
+++ b/src/content/blog/analyzing-execution-traces-with-holistic-trace-analysis.mdx
@@ -1,5 +1,5 @@
 ---
-title: Analyzing Execution Traces with Hollistic Trace Analysis
+title: Analyzing Execution Traces with Holistic Trace Analysis
 description: Going from PyTorch traces to a visual representation of the execution of your program. Includes resources for further exploration.
 heroImage: hero.png
 pubDate: September 15 2024
@@ -8,17 +8,17 @@ unlisted: true
 ---
 
 import { Image } from "astro:assets";
-import cuda_launch from "../../blog/analyzing-execution-traces-with-hollistic-trace-analysis/cuda_launch.webp";
+import cuda_launch from "../../blog/analyzing-execution-traces-with-holistic-trace-analysis/cuda_launch.webp";
 
-### Hollistic Trace Analysis (HTA)
+### Holistic Trace Analysis (HTA)
 
-[HollisticTraceAnalysis (HTA)](https://github.com/facebookresearch/HolisticTraceAnalysis) is a library which provides a set of tools for analyzing PyTorch traces. It is designed to be a "pythonic" was of analyzing traces without the need for closed source tools such as [NVIDIA NSIGHT Compute](https://developer.nvidia.com/nsight-compute).
+[HolisticTraceAnalysis (HTA)](https://github.com/facebookresearch/HolisticTraceAnalysis) is a library which provides a set of tools for analyzing PyTorch traces. It is designed to be a "pythonic" was of analyzing traces without the need for closed source tools such as [NVIDIA NSIGHT Compute](https://developer.nvidia.com/nsight-compute).
 
 ```bash
 pip install HolisticTraceAnalysis
 ```
 
-HTA supports multiple objects for analysis. Consequently, each file must contain a `rank` key such that HTA can know the location of a device. Without a rank, you recieve the following (rather cyptic error):
+HTA supports multiple objects for analysis. Consequently, each file must contain a `rank` key such that HTA can know the location of a device. Without a rank, you receive the following (rather cyptic error):
 
 ```console
 2024-02-23 20:37:50,287 - hta - trace.py:L389 - INFO - traces
@@ -28,7 +28,7 @@ HTA supports multiple objects for analysis. Consequently, each file must contain
 2024-02-23 20:37:50,292 - hta - trace.py:L541 - ERROR - The list of ranks to be parsed is empty.
 ```
 
-Not to be detered, we may createa a `TraceAnalysis` object with the following to represent traces collected:
+Not to be detered, we may create a `TraceAnalysis` object with the following to represent traces collected:
 
 ```python
 from hta.trace_analysis import TraceAnalysis
@@ -46,7 +46,7 @@ for trace in glob("traces/*.json"):
 analyzer = TraceAnalysis(trace_dir="traces") # this should be different
 ```
 
-After setting up your analyzer object, you are then able to use HTA exactly as described by the [HTA documenation](https://hta.readthedocs.io/en/latest/). For instance, you could get statistics about CUDA kernel launches using the following:
+After setting up your analyzer object, you are then able to use HTA exactly as described by the [HTA documentation](https://hta.readthedocs.io/en/latest/). For instance, you could get statistics about CUDA kernel launches using the following:
 
 ```python
 kernel_info_df = analyzer.get_cuda_kernel_launch_stats()
