--- a/src/content/blog/create-your-resume-in-html-and-css.mdx
+++ b/src/content/blog/create-your-resume-in-html-and-css.mdx
@@ -70,7 +70,7 @@ import latexAndWord from "../../blog/create-your-resume-in-html-and-css/latex-an
   <figcaption>Two common resume formats in LaTeX and Microsoft Word</figcaption>
 </figure>
 
-Despite being visually appealing, LaTeX and Microsoft Word can **create problems** with ATS parsers. Both programs **sacrafice parsability** for **visual appeal.**
+Despite being visually appealing, LaTeX and Microsoft Word can **create problems** with ATS parsers. Both programs **sacrifice parsability** for **visual appeal.**
 
 ## Mangled PDFs - Problems with Both Approaches
 
@@ -99,7 +99,7 @@ For more information on the tranasformation between **HTML** and **PDF** documen
 
 ## Why is a typeset language so nice?
 
-As a practical example, a common criticism I will get of my resume is that it reads too **data-sciency**. Because I havea built a couple of data-science projects over the years. Specifically, a lengthly post I wrote on [the International Science and Engineering Fair (ISEF)](https://www.linkedin.com/pulse/behind-innovation-insights-from-international-science-william-kaiser/).
+As a practical example, a common criticism I will get of my resume is that it reads too **data-sciency**. Because I have built a couple of data-science projects over the years. Specifically, a lengthy post I wrote on [the International Science and Engineering Fair (ISEF)](https://www.linkedin.com/pulse/behind-innovation-insights-from-international-science-william-kaiser/).
 
 For my ISEF analysis, I wrote the following **blurb** on my resume:
 
@@ -153,7 +153,7 @@ With typesetting, tailoring a resume for the role I am applying is **easy**. Mov
 
 As a programmer, I like the fact that I can use **git** to keep track of changes to my resume. No more `resume_v1.docx`, `resume_v2.docx`, `resume_v3.docx` files! Having a **version control system** for my resume is a **game-changer**.
 
-All in all, this approach gives me flexability in my resume. I can make it **data-sciency** or **quant**-y or **whatever** I want. 
+All in all, this approach gives me flexibility in my resume. I can make it **data-sciency** or **quant**-y or **whatever** I want. 
 
 ## Are the benefits to a HTML resume worth it?
 
@@ -163,7 +163,7 @@ Using HTML and CSS to create your resume **can** improve ATS performance. Howeve
 
 Because of the work creating your own resume in HTML takes, it **probably** will not be worth the time. **Getting better** skills, experience, projects, networking and applying to more jobs **will be more** effective than minor ATS optimizations. I made my resume in HTML and CSS because I was **stuck on a train** from New York for **8 hours** and wanted a project.
 
-Overall, this method is a good **antidote** to **LaTeX** for those who enjoy a typeset resume &mdash; without the ATS penality.
+Overall, this method is a good **antidote** to **LaTeX** for those who enjoy a typeset resume &mdash; without the ATS penalty.
 
 ---
 
