--- a/src/content/blog/how-do-you-test-an-interactive-breakdown-of-your-imessages-habits.mdx
+++ b/src/content/blog/how-do-you-test-an-interactive-breakdown-of-your-imessages-habits.mdx
@@ -81,7 +81,7 @@ This navigates to the special folder where you iMessage data is stored.
 <details>
   <summary>Why is it taking so long to load?</summary>
   An average user has over 1,000,000 messages &mdash; that is **a lot** of data to
-  process. Executing opperations on your data to find your most active contacts,
+  process. Executing operations on your data to find your most active contacts,
   group chats, favorite times of day to text, etc. takes a lot of searching. Depending
   on the speed of your computer, this could take a bit of time.
 </details>
