--- a/src/content/blog/trace-driven-gpu-simulation-with-pytorch-profiler-and-astra-sim.mdx
+++ b/src/content/blog/trace-driven-gpu-simulation-with-pytorch-profiler-and-astra-sim.mdx
@@ -247,7 +247,7 @@ sudo docker run -dt --name astra-sim astra-sim
 sudo docker exec astra-sim ./build/astra_analytical/build.sh
 ```
 
-After buiding the container, you should see the following output indicating a successful build of Astra-Sim using CMake.
+After building the container, you should see the following output indicating a successful build of Astra-Sim using CMake.
 
 ```console
 [ 98%] Building CXX object AstraSim_Analytical/CMakeFiles/AstraSim_Analytical_Congestion_Aware.dir/congestion_aware/main.cc.o
@@ -297,10 +297,10 @@ sys[0] finished, 6749042 cycles
 sys[63] finished, 6749042 cycles
 ```
 
-For more details about configuring Astra-Sim, please see the [Run Astra-Sim Documenation](https://astra-sim.github.io/astra-sim-docs/getting-started/run.html). For more information about configuring Astra-Sim, check out the [Astra-Sim Tutorial from ASPLOS](https://www.youtube.com/playlist?list=PL_-MhI2LIpUur0QO3NLLQmEIEk9jSGjnT) which provides a comprehensive overview of the simulator.
+For more details about configuring Astra-Sim, please see the [Run Astra-Sim Documentation](https://astra-sim.github.io/astra-sim-docs/getting-started/run.html). For more information about configuring Astra-Sim, check out the [Astra-Sim Tutorial from ASPLOS](https://www.youtube.com/playlist?list=PL_-MhI2LIpUur0QO3NLLQmEIEk9jSGjnT) which provides a comprehensive overview of the simulator.
 
 ## Summary
 
-In this tutorial, we have defined a simple CNN model for classifying the MNIST dataset. Model training was analyized with PyTorch Profiler and traces were collected. Traces were then able to be: analyzed and converted into Chakra executions traces. Finally, Astra-Sim was then used to simulate how these traces would execute on a network.
+In this tutorial, we have defined a simple CNN model for classifying the MNIST dataset. Model training was analyzed with PyTorch Profiler and traces were collected. Traces were then able to be: analyzed and converted into Chakra executions traces. Finally, Astra-Sim was then used to simulate how these traces would execute on a network.
 
 If you want to play around with this yourself, you may use [Google Collab to view this entire process as a notebook](https://colab.research.google.com/drive/1t0IgZ8eZ5N7zwZci-jOMXycv78isUWS2).
